--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "apollo-boost": "^0.1.16",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "graphql": "^14.0.2",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.25",
