--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.16",
+    "apollo-cache-inmemory": "^1.2.10",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-http": "^1.5.5",
     "bootstrap-vue": "^2.0.0-rc.11",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.25",
     "vue-router": "^3.0.1"
